--- a/style.css
+++ b/style.css
@@ -1,1 +1,1 @@
-body { font-family: Georgia, sans-serif; background-color: green; }
+body { font-family: Georgia, sans-serif; background-color: green; d-color: green; }}
